<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_ParseContextInitializeFromInputStream" Id="{d1610395-a1c3-4c86-8ccb-c5e73072cec3}" SpecialFunc="None">
    <Declaration><![CDATA[// Initialize a ST_ParseContext, building all ST_ParserInternalState from defaults and the given buffer.
FUNCTION F_ParseContextInitializeFromInputStream : ST_ParseContext
VAR_IN_OUT CONSTANT
    fbInputStream : FB_CodedInputStream;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
F_ParseContextInitializeFromInputStream.stBuffer := fbInputStream.stBuffer;
F_ParseContextInitializeFromInputStream.stState  := fbInputStream.InternalState;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>