<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_ParseContextInitialize" Id="{4b198008-c3b5-40cb-bf3a-84184a25baf9}" SpecialFunc="None">
    <Declaration><![CDATA[// Initialize a ST_ParseContext, building all ST_ParserInternalState from defaults and the given buffer.
FUNCTION F_ParseContextInitialize : ST_ParseContext
VAR_INPUT
    stBuffer    : ST_Span;    
END_VAR
VAR
    refState    : REFERENCE TO ST_ParserInternalState;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
F_ParseContextInitialize.stBuffer := stBuffer;
refState REF= F_ParseContextInitialize.stState;

refState.nBufferSize        := stBuffer.nSize;
refState.nSizeLimit         := Param_PB.cMaxProtobufRawBuffer;
refState.nRecursionLimit    := Param_PB.cRecursionLimit; 
refState.nCurrentLimit      := TO_UDINT(-1);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>